# ctf-agent

./: .env_example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README-VPN.md  README.md  connect-htb.sh  docker-compose.yml  flags_example.json  main.py  playground.ipynb  pyproject.toml  ruff.toml  todo.md  watcher.py
.github/: copilot-instructions.md
.github/workflows/: claude-pr-review.yml  claude.yml  pr-review-synthesis.yml
ctf-logs/: sessions.json  state.json  token_logs.jsonl  token_state.json
local_challenges/autopenbench_improved/: docker-compose.yml
scripts/: disconnect-htb.sh  experiment_status.py  extract_session.py  replay_openrouter_messages.py  run_experiment.py  smoke_test_executor.py
src/: __init__.py
src/chap_utils/: __init__.py  protocol_generator.py  relay_handler.py
src/config/: constants.py  experiment_custom_instructions.py  logging.py  session_runtime.py  workspace.py
src/experiment_utils/: docker_ops.py  key_validator.py  main_experiment_agent.py  validate_flag.py
src/llm_utils/: api_call.py  groq.py  model_utils.py  openrouter.py  prompt_builder.py  prompts.py  response_schema.py
src/utils/: cleanup.py  docker_exec.py  docker_utils.py  environment.py  git.py  model_utils.py  network_utils.py  output.py  pty_session.py  replay.py  response_schema.py  run_ids.py  vpn.py  (+5 more)
tests/: test_experiment_status.py  test_flag_validation.py  test_git_utils.py  test_kali_container.py  test_local_challenges.py  test_openrouter.py  test_output.py  test_output_formatting.py  test_prompt_rendering.py  test_pty_session.py  test_replay.py  test_session_utils.py  test_vpn_utils.py  test_workspace_cleanup.py
(+34 files in other folders)
