[project]
name = "ctf-agent"
version = "0.1.0"
description = "ctf-agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "docker>=7.0.0",
    "python-dotenv>=0.9.9",
    "discord-py>=2.6.4",
    "pyyaml>=6.0.3",
    "cryptography>=46.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "mypy>=1.15.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "local_challenges/",
    "results/",
    "ctf-workspace/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = ["docker.*", "discord.*"]
ignore_missing_imports = true
