[project]
name = "ctf-agent"
version = "0.1.0"
description = "ctf-agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "docker>=7.0.0",
    "python-dotenv>=0.9.9",
    "discord-py>=2.6.4",
    "pyyaml>=6.0.3",
    "cryptography>=46.0.3",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pexpect>=4.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
